--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Billing System PWA",
-  "short_name": "Billing",
+  "name": "Invoice PWA",
+  "short_name": "InvoiceApp",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#ffffff",
